--- a/allocate.html
+++ b/allocate.html
@@ -194,7 +194,7 @@ textarea{
 </div>
 
 <script>
-const BACKEND="PASTE_BACKEND_URL_HERE";
+const BACKEND="https://script.google.com/macros/s/AKfycbzaYTDl6fJeu2hlQr5jOPkUVD8p_bVni6-q-8FlJ3HG2RlV4zo0c-5g4UDDq40Z0V7FhA/exec";
 const token=new URLSearchParams(location.search).get("token");
 
 let angle=0, spinning=false;
